syntax = "proto3";

import "common.proto";
import "google/protobuf/timestamp.proto";

package ThmServices;

service Order {
    rpc SendOrder(SendOrderReq) returns (SendOrderRsp);
    rpc UpdateOrder(UpdateOrderReq) returns (UpdateOrderRsp);
    rpc DeleteOrder(DeleteOrderReq) returns (DeleteOrderRsp);

    rpc Subscribe(SubscribeReq) returns (stream SubscribeRsp);
}

message SendOrderReq {
    ProviderType provider = 1;
    string exchange = 2;
    string symbol = 3;

    double price = 5;
    double qty = 6;
    BuySell buy_sell = 7;
    string tag = 8;
}

message SendOrderRsp {
    string message = 1;
}

message UpdateOrderReq {
    ProviderType provider = 1;
    string exchange = 2;
    string symbol = 3;

    double price = 5;
    double qty = 6;
    BuySell buy_sell = 7;
    string tag = 8;
}

message UpdateOrderRsp {
    string message = 1;
}

message DeleteOrderReq {
    ProviderType provider = 1;
    string exchange = 2;
    string symbol = 3;

    string orderID = 5;
}

message DeleteOrderRsp {
    string message = 1;
}

message SubscribeReq {
    ProviderType provider = 1;
    string exchange = 2;
    string symbol = 3;
}

message SubscribeRsp {
    ProviderType provider = 1;
    string exchange = 2;
    string type = 3;
    string symbol = 4;
    
    google.protobuf.Timestamp date_time = 5;

    double price = 7;
    double qty = 8;
    BuySell buy_sell = 9;
    string status = 10;
    string order_type = 11;
    string text = 12;
}

